Nodify main form. Add learning program

--- a/quadcopter_research/quadcopter_research/Core/Unity/_RENDERER.html
+++ b/quadcopter_research/quadcopter_research/Core/Unity/_RENDERER.html
@@ -59,7 +59,6 @@
 			});
 		-->
 		</script>
-        <script type="text/javascript" src="Interop.js"></script>
 		<style type="text/css">
 		<!--
 		body {
@@ -113,9 +112,9 @@
 		-->
 		</style>
 	</head>
-	<body style="margin:0">
+	<body>
 			<div id="unityPlayer">
-				
+
 			</div>
 	</body>
 </html>
